@@ -42,6 +42,9 @@ Do not exclude the SOA record from the comparison.  The SOA record may
 then show up as changed due to a new serial number.  Off by default since
 you may be interested to know if (other zone apex elements) have changed.
 .TP
+\fB-e\fR
+Exit with status code 2 when zones differ.
+.TP
 \fB-h\fR
 Show usage and exit
 .TP
